// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plots-FunnelChart 基础仪表图 1`] = `
Object {
  "animation": false,
  "appendPadding": Array [
    10,
    5,
    10,
    10,
  ],
  "autoFit": undefined,
  "axis": Object {
    "grid": null,
    "label": Object {
      "offset": -24,
      "style": Object {
        "textAlign": "center",
        "textBaseline": "middle",
      },
    },
    "line": null,
    "subTickLine": Object {
      "length": -8,
    },
    "tickLine": Object {
      "length": -12,
    },
  },
  "data": 0.75,
  "endAngle": 0.5235987755982988,
  "height": 336,
  "indicator": Object {
    "pin": Object {
      "style": Object {
        "fill": "#fff",
        "lineWidth": 4.5,
        "r": 9.75,
        "stroke": "#D0D0D0",
      },
    },
    "pointer": Object {
      "style": Object {
        "lineCap": "round",
        "lineWidth": 5,
        "stroke": "#D0D0D0",
      },
    },
  },
  "innerRadius": 0.9,
  "meta": Object {
    "percent": Object {
      "sync": "v",
      "tickCount": 5,
      "tickInterval": 0.2,
    },
    "range": Object {
      "sync": "v",
    },
  },
  "percent": 0.75,
  "radius": 0.95,
  "range": Object {
    "color": Array [
      "#F4664A",
      "#FAAD14",
      "#30BF78",
    ],
    "ticks": Array [
      0,
      0.3333333333333333,
      0.6666666666666666,
      1,
    ],
  },
  "startAngle": -3.6651914291880923,
  "statistic": Object {
    "title": false,
  },
  "syncViewPadding": true,
  "width": 400,
}
`;

exports[`Plots-FunnelChart 旧版仪表图 1`] = `
Object {
  "animation": false,
  "appendPadding": Array [
    10,
    5,
    10,
    10,
  ],
  "autoFit": undefined,
  "axis": Object {
    "grid": null,
    "label": Object {
      "formatter": [Function],
      "offset": -24,
      "style": Object {
        "textAlign": "center",
        "textBaseline": "middle",
      },
    },
    "line": null,
    "subTickLine": Object {
      "length": -8,
    },
    "tickLine": Object {
      "length": -12,
    },
  },
  "color": Array [
    "#F4664A",
    "#FAAD14",
    "#30BF78",
  ],
  "data": 0.78,
  "endAngle": 0.5235987755982988,
  "height": 336,
  "indicator": Object {
    "pin": Object {
      "style": Object {
        "fill": "#fff",
        "lineWidth": 4.5,
        "r": 9.75,
        "stroke": "#D0D0D0",
      },
    },
    "pointer": Object {
      "style": Object {
        "lineCap": "round",
        "lineWidth": 5,
        "stroke": "#D0D0D0",
      },
    },
  },
  "innerRadius": 0.9,
  "meta": Object {
    "percent": Object {
      "sync": "v",
      "tickCount": 5,
      "tickInterval": 0.2,
    },
    "range": Object {
      "sync": "v",
    },
  },
  "percent": 0.78,
  "radius": 0.95,
  "range": Object {
    "color": Array [
      "#F4664A",
      "#FAAD14",
      "#30BF78",
    ],
    "ticks": Array [
      0,
      0.3333333333333333,
      0.6666666666666666,
      1,
    ],
  },
  "startAngle": -3.6651914291880923,
  "statistic": Object {
    "color": "#30bf78",
    "text": "优",
    "title": false,
  },
  "syncViewPadding": true,
  "width": 400,
}
`;

exports[`Plots-GaugeChart 基础仪表图 1`] = `
Object {
  "animation": false,
  "appendPadding": Array [
    10,
    5,
    10,
    10,
  ],
  "autoFit": undefined,
  "axis": Object {
    "grid": null,
    "label": Object {
      "offset": -24,
      "style": Object {
        "textAlign": "center",
        "textBaseline": "middle",
      },
    },
    "line": null,
    "subTickLine": Object {
      "length": -8,
    },
    "tickLine": Object {
      "length": -12,
    },
  },
  "data": 0.75,
  "endAngle": 0.5235987755982988,
  "height": 336,
  "indicator": Object {
    "pin": Object {
      "style": Object {
        "fill": "#fff",
        "lineWidth": 4.5,
        "r": 9.75,
        "stroke": "#D0D0D0",
      },
    },
    "pointer": Object {
      "style": Object {
        "lineCap": "round",
        "lineWidth": 5,
        "stroke": "#D0D0D0",
      },
    },
  },
  "innerRadius": 0.9,
  "meta": Object {
    "percent": Object {
      "sync": "v",
      "tickCount": 5,
      "tickInterval": 0.2,
    },
    "range": Object {
      "sync": "v",
    },
  },
  "percent": 0.75,
  "radius": 0.95,
  "range": Object {
    "color": Array [
      "#F4664A",
      "#FAAD14",
      "#30BF78",
    ],
    "ticks": Array [
      0,
      0.3333333333333333,
      0.6666666666666666,
      1,
    ],
  },
  "startAngle": -3.6651914291880923,
  "statistic": Object {
    "title": false,
  },
  "syncViewPadding": true,
  "width": 400,
}
`;

exports[`Plots-GaugeChart 旧版仪表图 1`] = `
Object {
  "animation": false,
  "appendPadding": Array [
    10,
    5,
    10,
    10,
  ],
  "autoFit": undefined,
  "axis": Object {
    "grid": null,
    "label": Object {
      "formatter": [Function],
      "offset": -24,
      "style": Object {
        "textAlign": "center",
        "textBaseline": "middle",
      },
    },
    "line": null,
    "subTickLine": Object {
      "length": -8,
    },
    "tickLine": Object {
      "length": -12,
    },
  },
  "color": Array [
    "#F4664A",
    "#FAAD14",
    "#30BF78",
  ],
  "data": 0.78,
  "endAngle": 0.5235987755982988,
  "height": 336,
  "indicator": Object {
    "pin": Object {
      "style": Object {
        "fill": "#fff",
        "lineWidth": 4.5,
        "r": 9.75,
        "stroke": "#D0D0D0",
      },
    },
    "pointer": Object {
      "style": Object {
        "lineCap": "round",
        "lineWidth": 5,
        "stroke": "#D0D0D0",
      },
    },
  },
  "innerRadius": 0.9,
  "meta": Object {
    "percent": Object {
      "sync": "v",
      "tickCount": 5,
      "tickInterval": 0.2,
    },
    "range": Object {
      "sync": "v",
    },
  },
  "percent": 0.78,
  "radius": 0.95,
  "range": Object {
    "color": Array [
      "#F4664A",
      "#FAAD14",
      "#30BF78",
    ],
    "ticks": Array [
      0,
      0.3333333333333333,
      0.6666666666666666,
      1,
    ],
  },
  "startAngle": -3.6651914291880923,
  "statistic": Object {
    "color": "#30bf78",
    "text": "优",
    "title": false,
  },
  "syncViewPadding": true,
  "width": 400,
}
`;
